--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-02-03  Steve Martin  <kronostar.st4@gmail.com>
+	* Laravel framework added
+	
 2012-06-03  Steve Martin  <kronostar.st4@gmail.com>
 	* classes/DB.class.php: added
 	
