--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-MusicDb
-=======
+MuColLib
+========
 
 A database geared at providing a comprehensive resource of information about a music collection.  This goes way beyond just recording the Artist and Album title, although it can do that too.
 
