--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -1,16 +1,37 @@
-\documentclass[10pt,a4paper,final,twoside,titlepage]{article}
+\documentclass[12pt,a4paper,final,twoside,titlepage]{book}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{makeidx}
 \usepackage{graphicx}
-\author{Steve Martin}
-\title{MuColLib}
+\author{\LARGE Steve Martin}
+\title{\Huge MuColLib}
 \begin{document}
 \maketitle
+\null
+\vfill
+Copyright \copyright{}  2018,2019  Steve Martin.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3
+or any later version published by the Free Software Foundation;
+with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+A copy of the license is included in the section entitled ``GNU
+Free Documentation License''.
+\frontmatter
 \tableofcontents
 \newpage
-\section{Introduction}
-\label{intro}
+\chapter{Introduction}
+This is the manual for \textbf{\textit{MuColLib}}, the music collection library tool. A database geared at providing a comprehensive resource of information about a music collection.
+
+This goes way beyond just recording the Artist and Album title, although it can do that too!
+\mainmatter
+\part{Guide}
+\chapter{Getting Started}
+\section{Installation}
+At this moment in time installation is pretty basic, we have not packaged the program in any way.  So, for now, the best way to install is to download the programs, install them somewhere appropriate, and run them with Python 3.7.
+\part{Licenses}
+\include{fdl}
+\newpage
+\include{3ClauseBsd}
 \end{document}
