--- a/doc/fdl.tex
+++ b/doc/fdl.tex
@@ -1,5 +1,5 @@
 \chapter*{\rlap{GNU Free Documentation License}}
-\phantomsection  % so hyperref creates bookmarks
+\phantomsection
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
 %\label{label_fdl}
 
