--- a/doc/tables.tex
+++ b/doc/tables.tex
@@ -1,42 +1,24 @@
-\documentclass[10pt,a4paper,oneside,notitlepage]{article}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{longtable}
-
-\begin{document}
-
-% phpMyAdmin LaTeX Dump
-% version 3.4.10.1deb1
-% http://www.phpmyadmin.net
-%
-% Host: localhost
-% Generation Time: May 27, 2012 at 07:41 PM
-% Server version: 5.1.61
-% PHP Version: 5.3.10-2
-% 
-% Database: 'mucollib'
-% 
+\chapter*{\rlap{Tables}}
+\phantomsection
+\addcontentsline{toc}{chapter}{Tables}
 
 %
 % Structure: Album
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table Album} \label{tab:Album-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Name & varchar(120) & No &  &  &  \\ \hline 
-Year & year(4) & No &  &  &  \\ \hline 
-CatNo & varchar(20) & Yes & NULL &  &  \\ \hline 
-OrigYear & year(4) & Yes & NULL &  &  \\ \hline 
-OrigCatNo & varchar(20) & Yes & NULL &  &  \\ \hline 
-Artist\_id & int(11) & No &  & Artist (id) &  \\ \hline 
-Format\_id & int(11) & No &  & Format (id) &  \\ \hline 
-Genre\_id & int(11) & No &  & Genre (id) &  \\ \hline 
-Label\_id & int(11) & No &  & Label (id) &  \\ \hline 
-Label\_id\_Orig & int(11) & No &  & Label (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Name & varchar(120) & No &  &  \\ \hline 
+Year & year(4) & No &  &  \\ \hline 
+CatNo & varchar(20) & Yes & NULL &  \\ \hline 
+OrigYear & year(4) & Yes & NULL &  \\ \hline 
+OrigCatNo & varchar(20) & Yes & NULL &  \\ \hline 
+Artist\_id & int(11) & No &  & Artist (id) \\ \hline 
+Format\_id & int(11) & No &  & Format (id) \\ \hline 
+Genre\_id & int(11) & No &  & Genre (id) \\ \hline 
+Label\_id & int(11) & No &  & Label (id) \\ \hline 
+Label\_id\_Orig & int(11) & No &  & Label (id) \\ \hline 
  \end{longtable}
 
 %
@@ -44,11 +26,11 @@ Label\_id\_Orig & int(11) & No &  & Label (id) &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table AlbumMusician} \label{tab:AlbumMusician-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Musician\_id & int(11) & No &  & Musician (id) &  \\ \hline 
-Album\_id & int(11) & No &  & Album (id) &  \\ \hline 
-MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Musician\_id & int(11) & No &  & Musician (id) \\ \hline 
+Album\_id & int(11) & No &  & Album (id) \\ \hline 
+MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) \\ \hline 
  \end{longtable}
 
 %
@@ -56,10 +38,10 @@ MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table Artist} \label{tab:Artist-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(250) & No &  &  \\ \hline 
-Sort & varchar(250) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(250) & No &  \\ \hline 
+Sort & varchar(250) & No &  \\ \hline 
  \end{longtable}
 
 %
@@ -67,9 +49,9 @@ Sort & varchar(250) & No &  &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table Format} \label{tab:Format-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(20) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(20) & No &  \\ \hline 
  \end{longtable}
 
 %
@@ -77,21 +59,19 @@ Name & varchar(20) & No &  &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table Genre} \label{tab:Genre-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(45) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(45) & No &  \\ \hline 
  \end{longtable}
-
-\pagebreak 
 
 %
 % Structure: Instrument
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table Instrument} \label{tab:Instrument-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(20) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(20) & No &  \\ \hline 
  \end{longtable}
 
 %
@@ -99,9 +79,9 @@ Name & varchar(20) & No &  &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table Label} \label{tab:Label-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(45) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(45) & No &  \\ \hline 
  \end{longtable}
 
 %
@@ -109,10 +89,10 @@ Name & varchar(45) & No &  &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table Musician} \label{tab:Musician-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Artist\_id & int(11) & No &  & Artist (id) &  \\ \hline 
-Instrument\_id & int(11) & No &  & Instrument (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Artist\_id & int(11) & No &  & Artist (id) \\ \hline 
+Instrument\_id & int(11) & No &  & Instrument (id) \\ \hline 
  \end{longtable}
 
 %
@@ -120,9 +100,9 @@ Instrument\_id & int(11) & No &  & Instrument (id) &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|} 
  \caption{Structure of table MusicianStatus} \label{tab:MusicianStatus-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
-Name & varchar(20) & No &  &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  \\ \hline 
+Name & varchar(20) & No &  \\ \hline 
  \end{longtable}
 
 %
@@ -130,12 +110,12 @@ Name & varchar(20) & No &  &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table Song} \label{tab:Song-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Name & varchar(120) & No &  &  &  \\ \hline 
-Length & time & Yes & NULL &  &  \\ \hline 
-Number & int(11) & No &  &  &  \\ \hline 
-Album\_id & int(11) & No &  & Album (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Name & varchar(120) & No &  &  \\ \hline 
+Length & time & Yes & NULL &  \\ \hline 
+Number & int(11) & No &  &  \\ \hline 
+Album\_id & int(11) & No &  & Album (id) \\ \hline 
  \end{longtable}
 
 %
@@ -143,24 +123,22 @@ Album\_id & int(11) & No &  & Album (id) &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table SongComposer} \label{tab:SongComposer-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Artist\_id & int(11) & No &  & Artist (id) &  \\ \hline 
-Song\_id & int(11) & No &  & Song (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Artist\_id & int(11) & No &  & Artist (id) \\ \hline 
+Song\_id & int(11) & No &  & Song (id) \\ \hline 
  \end{longtable}
-
-\pagebreak 
 
 %
 % Structure: SongMusician
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table SongMusician} \label{tab:SongMusician-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Musician\_id & int(11) & No &  & Musician (id) &  \\ \hline 
-Song\_id & int(11) & No &  & Song (id) &  \\ \hline 
-MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Musician\_id & int(11) & No &  & Musician (id) \\ \hline 
+Song\_id & int(11) & No &  & Song (id) \\ \hline 
+MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) \\ \hline 
  \end{longtable}
 
 %
@@ -168,11 +146,10 @@ MusicianStatus\_id & int(11) & No &  & MusicianStatus (id) &  \\ \hline
 %
  \begin{longtable}{|l|c|c|c|l|l|} 
  \caption{Structure of table SongSection} \label{tab:SongSection-structure} \\
- \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} & \multicolumn{1}{|c|}{\textbf{MIME}} \\ \hline \hline
-\textbf{\textit{id}} & int(11) & No &  &  &  \\ \hline 
-Ref & varchar(10) & No &  &  &  \\ \hline 
-Name & varchar(120) & No &  &  &  \\ \hline 
-Song\_id & int(11) & No &  & Song (id) &  \\ \hline 
+ \hline \multicolumn{1}{|c|}{\textbf{Column}} & \multicolumn{1}{|c|}{\textbf{Type}} & \multicolumn{1}{|c|}{\textbf{Null}} & \multicolumn{1}{|c|}{\textbf{Default}} & \multicolumn{1}{|c|}{\textbf{Links to}} \\ \hline \hline
+\textbf{\textit{id}} & int(11) & No &  &  \\ \hline 
+Ref & varchar(10) & No &  &  \\ \hline 
+Name & varchar(120) & No &  &  \\ \hline 
+Song\_id & int(11) & No &  & Song (id) \\ \hline 
  \end{longtable}
 
-\end{document}
