--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -40,10 +40,21 @@ The list of tables presented in Part II, represent the initial basis upon which 
 \chapter{Getting Started}
 \section{Installation}
 At this moment in time installation is pretty basic, we have not packaged the program in any way.  So, for now, the best way to install is to download the programs, install them somewhere appropriate, and run them with Python 3.7.
+\pagebreak 
 \section{First run}
-TBD - add a screen shot
+When the program is run for the first time it will create a database, because one does not exist, and will present the following screen:
+
+\includegraphics[scale=1]{Images/firstRun.png}
+
+For now we will assume that you do not have an available CSV file in the correct format (more on this below), and you select \textbf{\textit{No}}
+
 \section{Start screen}
-TBD - add a screen shot
+Once past the first run screen, or if this is not the first time you have run the program, you will see this screen:
+
+\includegraphics[scale=1]{Images/firstScreen.png}
+
+Which, of course, would ordinarily be populated with elements of your music library.
+
 \chapter{Adding Entries}
 \section{Artists}
 \section{Albums}\phantomsection
